# wepl

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Makefile  README.md
.github/workflows/: main.yml
docs/: value-literals.md
src/: command.rs  evaluator.rs  main.rs  runtime.rs  wit.rs  world.rs
src/command/: alt_parser.rs  parser.rs  tokenizer.rs
