[package]
name = "wepl"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"
categories = ["wasm"]
keywords = ["webassembly", "wasm"]
repository = "https://github.com/rylev/wepl"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.77"
bytes = "1.5.0"
clap = { version = "4.5.0", features = ["derive"] }
colored = "2"
env_logger = "0.11"
home = "0.5.9"
log = "0.4"
nom = "7.1.3"
nom_locate = "4.2"
rustyline = "14.0.0"
tokio = { version = "1.36.0", features = ["macros"] }

wasmtime = { version = "20.0.0", features = ["component-model"] }
wasmtime-wasi = { version = "20.0.0" }
wit-component = "0.205.0"
wit-parser = "0.205.0"
wasm-compose = "0.205.0"
