[package]
name = "wepl"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"
categories = ["wasm"]
keywords = ["webassembly", "wasm"]
repository = "https://github.com/rylev/wepl"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.77"
bytes = "1.5.0"
clap = { version = "4.5.0", features = ["derive"] }
colored = "2"
env_logger = "0.11"
home = "0.5.9"
log = "0.4"
nom = "7.1.3"
nom_locate = "4.2"
rustyline = "14.0.0"
tokio = { version = "1.38", features = ["macros"] }

wasmtime = "22.0"
wasmtime-wasi = "22.0"
wasi-virt = { git = "https://github.com/bytecodealliance/WASI-Virt", rev = "fd2fae04342ea58aab2426ca041da68be046b030" }
wit-component = "0.211"
wit-parser = "0.211"
wasm-compose = "0.211"
