[package]
name = "wepl"
version = "0.1.0"
edition = "2021"
description = "The WebAssembly Component repl."
license = "Apache-2.0 WITH LLVM-exception"
categories = ["wasm"]
keywords = ["webassembly", "wasm"]
repository = "https://github.com/rylev/wepl"
readme = "README.md"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bytes = "1.6"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
env_logger = "0.11"
home = "0.5"
log = "0.4"
nom = "7.1"
nom_locate = "4.2"
rustyline = "14.0"
tokio = { version = "1.38", features = ["macros"] }
wasmtime = "22.0"
wasmtime-wasi = "22.0"
wit-component = "0.211"
wit-parser = "0.211"
wasm-compose = "0.211"
